# startouch-python-sdk

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
docs/: index.md  installation.md  usage.md
src/startouch_python_sdk/: __init__.py  interfaces_0825fasttest.hpp  pybind_0825testfast.cpp  startouchclass.py  utils.py
src/startouch_python_sdk/param_csv_gripper/: permutationMatrix.csv  pi_b.csv  pi_fr.csv
tests/: __init__.py  test_startouch_python_sdk.py
