[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "startouch-python-sdk"
version = "0.1.0"
description = "Precompiled Startouch robot SDK"
readme = "README.md"
authors = [
  {name = "zhanglijie", email = "zlj15058114997@gmail.com"}
]
maintainers = [
  {name = "zhanglijie", email = "zlj15058114997@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/write-for-bug/startouch_python_sdk/issues"
changelog = "https://github.com/write-for-bug/startouch_python_sdk/blob/master/changelog.md"
homepage = "https://github.com/write-for-bug/startouch_python_sdk"

[project.scripts]
startouch_python_sdk = "startouch_python_sdk.cli:app"



[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
wheel.packages = ["startouch_python_sdk"]  # 打包 src/startouch_python_sdk/





[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
